# eFootball-Minifaces-Downloalder

./: .gitignore  AGENTS.md  OPTIMIZATION_COMPLETE.md  README.md  README_OPTIMIZED.md  benchmark.py  check_acl.py  config.py  create_archive.py  create_livecpk_lines.py  get_miniface.py  get_update_only.py  pes_2017.py  players_in_team.py  png_to_dds.py  pyproject.toml  quick_test.py  requirements.txt  script.py  script_optimized.py  teams.py  test.py  test_optimized.py  update_func.py
.github/workflows/: delete-aio-releases.yml  manual-release.yml  new-release.yml  new-update.yml
111207/101/: map_ids.csv
Miniface Server/content/miniface-server/: credits.txt
Miniface Server/modules/: MiniFaceServer.lua
MinifaceServer/content/miniface-server/: credits.txt  skipped_players.txt
MinifaceServer/modules/: MiniFaceServer.lua
docs/: DEBUG_USAGE.md  FINAL_SUMMARY.md  FREETHREADING_MIGRATION.md  GITHUB_ACTIONS_FREETHREADING.md  GITHUB_ACTIONS_GUIDE.md  SMART_ACTIONS_COMPLETE.md
