[project]
name = "efootball-minifaces-downloalder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "bs4>=0.0.2",
    "idna>=3.10",
    "pyopenssl>=25.3.0",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
    "wand>=0.6.13",
]
